--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </section>
         <section id='my-contacts-section'>
             <div id='contact-flex-container'>
-                <h1>Давайте работать вместе!</h1>  
+                <h1>Как со мной связаться</h1>  
                 <div id="inner-contact-container">
                     <div class='profile-link'>
                         <img src='contacts_images/whatsapp.png'></img>
